tests/errors/loop-borrow-state.ari
fn main() -> i64 {
  let condition = true;
  var first = 1;
  var second = 2;
  var holder: (ref i64, i64) = (ref first, 0);

  while condition {
    holder = (ref second, 1);
  }

  return 0;
}
